--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
   <a href="/">
     <img src="/logo.png" id="logo" alt="Blog logo"/>
   </a>
-  <h2>I'm <a href="/">{{ site.theme.name }}</a>.Programmer.</h2>
+  <h2>I'm <a href="/">{{ site.theme.name }}</a>.</h2>
   <hr/>
   <ul>
   <p align="center">Programmer and Creator of ICed.</p>
