--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,9 @@
   <h2>I'm <a href="/">{{ site.theme.name }}</a>.</h2>
   <hr/>
   <ul>
-  <p align="center">Programmer and Creator of ICed.</p>
+  <p align="center">Programmer and créateur de ICed.</p>
+  <hr/>
+  <p align="center">Suivez-moi sur <a href="https://github.com/cedced19">Github</a>.</p>
   <hr/>
   <div>
     <div id="social">
