--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,8 @@
     <img src="/logo.png" id="logo" alt="Blog logo"/>
   </a>
   <h2>I'm <a href="/">{{ site.theme.name }}</a>.</h2>
-  <hr/>
   <ul>
-  <p align="center">Programmer and créateur de ICed.</p>
+  <p align="center">Programmer et créateur de ICed.</p>
   <hr/>
   <p align="center">Suivez-moi sur <a href="https://github.com/cedced19">Github</a>.</p>
   <hr/>
