--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
 </head>
 <body>
   <div class="container">
+  <a href="/about/">A propos</a>
+  <hr>
     <div class="four columns sidebar">
       {% include sidebar.html %}
     </div>
