--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,9 @@
 </head>
 <body>
   <div class="container">
-  <a href="/about/">A propos</a>
+  <ul>
+        <li><a  href="/about">About</a></li>
+  </ul>
   <hr>
     <div class="four columns sidebar">
       {% include sidebar.html %}
