--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -5,4 +5,4 @@
 {% include css/screen.css %}
 {% include css/layout.css %}
 {% include css/syntax.css %}
-{% include bootstap/bootstrap.css %}
+{% include css/bootstrap.css %}
