--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,30 +2,24 @@
 layout: default
 ---
 
-<p class="meta">
-  {% assign d = page.date | date: "%-d" %}
-  {% case d %}{% when "1" or "21" or "31" %}{{ d }}st of{% when "2" or "22" %}{{ d }}nd{% when "3" or "23" %}{{ d }}rd of{% else %}{{ d }}th of{% endcase %}
-  {{ page.date | date: "%B" }}, 
-  {{ page.date | date: "%Y" }}
-  <a href="/">
-    <i class="home fa fa-home"></i>
-  </a>
-</p>
-
-<h1 class="title">{{ page.title }}</h1>
-
-<div id="post">
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
-<div id="related">
-  <h3>Related Posts</h3>
-  <ul class="posts">
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
-    <li>
-      <span>{{ post.date | date_to_string }} &raquo;</span> <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
     {% endfor %}
   </ul>
 </div>
-{% include comments.html %}
