--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,7 @@
 </head>
 <body>
   <div class="container">
-  <ul>
-        <li><a  href="/about">About</a></li>
-  </ul>
-  <hr>
+        <h2><i class="fa fa-bookmark"></i>About</h2>
     <div class="four columns sidebar">
       {% include sidebar.html %}
     </div>
