--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div class="container">
-        <h2 class="nav" >About</h2>
+        <h2 ><a href="/about">About</a></h2>
     <div class="four columns sidebar">
       {% include sidebar.html %}
     </div>
