--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 <body>
   <div class="container">
         <h2 ><a href="/about">About</a></h2>
+        <h2 ><a href="http://github.com/cedced19/iced">ICed</a></h2>
     <div class="four columns sidebar">
       {% include sidebar.html %}
     </div>
