Update the foother

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-wrap" role="complementary">
 {% if page.class == 'home' %}
-	<p>Allez-y créez, c'est que du bonheur.</p>
+	<p>Todo : "Broadcast the happiness"</p>
 {% endif %}
 
 {% if page.class == 'post' %}
