--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="//use.typekit.net/qxu1oje.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body{% if page.class %} class="{{ page.class }}"{% endif %}>
