--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer class="footer-wrap" role="complementary">
-	<p><a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a>.</p>
+	<p>
+	Sous la license :
+	<br>
+	<a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons By Attribution 4.0</a>
+	</p>
 </footer>
