--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.meta-title }}</title>
         <meta name="viewport" content="width=device-width">
+        <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647" />
+        <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8" />
         <script type="text/javascript" src="//use.typekit.net/qxu1oje.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
