--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,21 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.meta-title }}</title>
         <meta name="viewport" content="width=device-width">
+        
         <meta name="twitter:cars" content="summary" />
         <meta name="twitter:title" content="{{ page.meta-title }}" />
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
         <meta name="twitter:site" content="@cedced19" />
         <meta name="twitter:author" content="@cedced19" />
+        <meta name="twitter:description" content="{{ content }}"/>
+        
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="{{ page.meta-title }}" />
+        <meta property="og:image" content="http://cedced19.github.io/profile.png" />
+        <meta property="og:description" content="{{ content }}"/>
+        <meta property="og:language" content="fr_FR">
+        <meta property="og:url" content="{{ site.url }}" />
+        
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647" />
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8" />
         <script type="text/javascript" src="//use.typekit.net/qxu1oje.js"></script>
