--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.meta-title }}</title>
         <meta name="viewport" content="width=device-width">
+        <script type="text/javascript" src="//use.typekit.net/qxu1oje.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="/css/style.css">
         
         <meta name="twitter:cars" content="summary" />
         <meta name="twitter:title" content="{{ page.meta-title }}" />
@@ -18,13 +23,10 @@
         <meta property="og:language" content="fr_FR">
         <meta property="og:url" content="{{ site.url }}" />
         
+        <link href="https://plus.google.com/104855167193751168501/" rel="publisher" />
+        
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647" />
         <meta name="google-site-verification" content="daG8-WfmzTnxEOZ0gvyKhFVPyqGcp_MuANWkyM8THK8" />
-        <script type="text/javascript" src="//use.typekit.net/qxu1oje.js"></script>
-        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-        <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body{% if page.class %} class="{{ page.class }}"{% endif %}>
 
