--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.meta-title }}</title>
         <meta name="viewport" content="width=device-width">
+        <!--[if lt IE 9]>
+            <script type="text/javascript" src="/scripts/ie.js"></script>
+        <![endif]-->
         <script type="text/javascript" src="/scripts/qxu1ojr.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
