--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,39 @@
 <script type="text/javascript" src="/scripts/jquery.min.js"></script>
-<script type="text/javascript" src="/scripts/scripts.js"></script>
+<script type="text/javascript">
+$(function(){
+	var header = $('.header'),
+		masthead = $('.masthead'),
+		scrollNotice = $('.scroll-notice');
+		
+	function centerMasthead(){
+		var mastheadHeight = masthead.height();
+		masthead.css({
+			"margin-top": "-" + (mastheadHeight / 2) + "px"
+			});
+		console.log('centering');
+	};
+
+	scrollNotice.click(function(){
+		$('html, body').animate({
+			scrollTop: $('.content-wrap').offset().top
+		},800, "swing");
+	});
+
+	$(window).scroll(function(){
+		var scrollDist = $(window).scrollTop();
+		scrollNotice.css({
+			"opacity" : 1 - (scrollDist / 600)
+		});
+	});
+
+	centerMasthead();
+
+	$(window).resize(function(){
+		centerMasthead();
+	});
+
+});
+</script>
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
