--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-wrap" role="complementary">
 	<p>
-	<a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+	License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
 	</p>
 </footer>
