--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
             {% if page.class == 'post' %}
             <p>
            <p>
-                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
+                <a href="http://twitter.com/share?text=&ldquo;{{ page.meta-title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
             </p>
             {% endif %}
 </footer>
