--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header{% if page.contrast == 'light' %} light{% endif %}" role="banner">
 	<div class="masthead">
-		<h1>{{ page.title }}</h1>
+		<h1>{{ page.meta-title }}</h1>
 		<hr>
 		<h2>{{ page.subtitle }}</h2>
 	</div>
