--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,10 @@
 	   License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
 	</p>
             {% if page.class == 'post' %}
-            <p>
-           <p>
-                <a href="http://twitter.com/share?text=&ldquo;{{ page.meta-title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
-            </p>
+            	{% if page.meta-title == 'Blog'%}
+	            <p>
+	                <a href="http://twitter.com/share?text=&ldquo;{{ page.meta-title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
+	            </p>
+	        {% endif %}
             {% endif %}
 </footer>
