--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 	   License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
 	</p>
             {% if page.class == 'post' %}
-            	{% if page.meta-title == 'Blog'%}
+            	{% if page.meta-title != 'Blog'%}
 	            <p>
 	                <a href="http://twitter.com/share?text=&ldquo;{{ page.meta-title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
 	            </p>
