--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.meta-title }} {% if page.class == 'post' %} | Blog {% endif %}</title>
+        <title>{{ page.meta-title }} {% if page.class == 'post' %} {% if page.meta-title != 'Blog'%} | Blog {% endif %} {% endif %}</title>
         <meta name="viewport" content="width=device-width">
         <!--[if lt IE 9]>
             <script type="text/javascript" src="/scripts/ie.js"></script>
