--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="/scripts/jquery.min.js"></script>
+{% if page.class != 'post' %}
 <script type="text/javascript">
 $(function(){
 	var header = $('.header'),
@@ -34,6 +35,7 @@ $(function(){
 
 });
 </script>
+{% endif %}
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
