--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="/scripts/jquery.min.js"></script>
 {% if page.class != 'post' %}
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script type="text/javascript">
 $(function(){
 	var header = $('.header'),
