--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
         <!--[if lt IE 9]>
             <script type="text/javascript" src="/scripts/ie.js"></script>
         <![endif]-->
-        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-        <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+        <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link rel="stylesheet" href="/css/style.css">
 
         <meta name="twitter:cars" content="summary" />
