--- a/demo/html5-page/main.css
+++ b/demo/html5-page/main.css
@@ -1,1 +1,24 @@
-@charset utf-8;body{background-color:#EFF5F8;color:#151515;font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;margin:0}#wrapper{background-color:#FFF;font-family:bad-script;font-style:normal;font-weight:400;margin-left:auto;margin-right:auto;max-width:1000px;min-width:740px;width:100%}#top{color:#FFF;float:left;overflow:hidden}h1{font-size:72px;margin-bottom:0;margin-top:0;text-align:center;text-transform:capitalize}h2{margin-top:.5em}#main{float:left;margin-left:2%;width:58%}#sidebar{float:right;margin-left:4%;width:34%}figure{display:block;width:420px}figure img{-webkit-box-shadow:1px 1px 15px #999;box-shadow:1px 1px 15px #999;padding:10px}figcaption{display:block;font-size:.875em;font-weight:700;margin-top:.5em;text-align:center}.centered{margin-left:auto;margin-right:auto}.floatleft{float:left;margin-left:0;margin-right:10px}.floatright{float:right;margin-left:10px;margin-right:0}footer{background-color:#43a6cb;clear:both;color:#FFF;float:none;padding-bottom:2px;padding-left:2%;padding-top:2px;visibility:visible}h1,h2{color:#9BD57C;font-family:bad-script;font-style:normal;font-weight:400;marging-right:6px;padding-top:100px;width:100%}#two{padding-bottom:auto}#center{margin-left:auto;margin-right:auto;width:100px}@media screen and max-width500px{body{font-size:25px}#sidebar{width:100%}#wrapper{background-color:#FFF;font-family:bad-script;font-style:normal;font-weight:400;margin-left:auto;margin-right:auto;max-width:470px;min-width:470px;width:100%}#center{margin-left:auto;margin-right:auto;width:300px}}
+@charset utf-8;
+body{color:#151515;font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;background-color:#EFF5F8;margin:0}
+#wrapper{width:100%;min-width:740px;max-width:1000px;margin-left:auto;margin-right:auto;background-color:#FFF;font-family:bad-script;font-style:normal;font-weight:400}
+#top{overflow:hidden;float:left;color:#FFF}
+h1{font-size:72px;margin-top:0;margin-bottom:0;text-align:center;text-transform:capitalize}
+h2{margin-top:.5em}
+#main{width:58%;margin-left:2%;float:left}
+#sidebar{width:34%;margin-left:4%;float:right}
+figure{display:block;width:420px}
+figure img{-webkit-box-shadow:1px 1px 15px #999;box-shadow:1px 1px 15px #999;padding:10px}
+figcaption{font-size:.875em;font-weight:700;text-align:center;display:block;margin-top:.5em}
+.centered{margin-left:auto;margin-right:auto}
+.floatleft{float:left;margin-left:0;margin-right:10px}
+.floatright{float:right;margin-left:10px;margin-right:0}
+footer{padding-top:2px;padding-bottom:2px;padding-left:2%;color:#FFF;clear:both;background-color:#43a6cb;float:none;visibility:visible}
+h1,h2{color:#9BD57C;font-family:bad-script;font-style:normal;font-weight:400;width:100%;padding-top:100px;marging-right:6px}
+#two{padding-bottom:auto}
+#center{margin-left:auto;margin-right:auto;width:100px}
+@media screen and max-width500px {
+body{font-size:25px}
+#sidebar{width:100%}
+#wrapper{width:100%;min-width:470px;max-width:470px;margin-left:auto;margin-right:auto;background-color:#FFF;font-family:bad-script;font-style:normal;font-weight:400}
+#center{margin-left:auto;margin-right:auto;width:300px}
+}
