--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             {% if page.class == 'home' %}
             	{% if page.meta-title != 'Cedced19'%}
 	            <p>
-	                <a href="http://twitter.com/share?text=&ldquo;{{ page.meta-title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
+	                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>i
 	            </p>
 	        {% endif %}
             {% endif %}
