--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.meta-title }} {% if page.class == 'post' %}{% if page.meta-title != 'Blog'%} | Blog{% endif %}{% endif %}</title>
+        <title>{{ page.title }} {% if page.class == 'post' %}{% if page.meta-title != 'Blog'%} | Blog{% endif %}{% endif %}</title>
         <meta name="viewport" content="width=device-width">
         <!--[if lt IE 9]>
             <script type="text/javascript" src="/scripts/ie.js"></script>
@@ -12,13 +12,13 @@
         <link rel="stylesheet" href="/css/style.css">
 
         <meta name="twitter:cars" content="summary" />
-        <meta name="twitter:title" content="{{ page.meta-title }}" />
+        <meta name="twitter:title" content="{{ page.title }}" />
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
         <meta name="twitter:site" content="@cedced19" />
         <meta name="twitter:author" content="@cedced19" />
 
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="{{ page.meta-title }}" />
+        <meta property="og:title" content="{{ page.title }}" />
         <meta property="og:image" content="http://cedced19.github.io/profile.png" />
         <meta property="og:language" content="fr_FR">
         <meta property="og:url" content="{{ site.url }}" />
