--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,14 +3,14 @@
 	   License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
 	</p>
             {% if page.class == 'post' %}
-            	{% if page.meta-title != 'Blog'%}
+            	{% if page.title != 'Blog'%}
 	            <p>
 	                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
 	            </p>
 	        {% endif %}
             {% endif %}
             {% if page.class == 'home' %}
-            	{% if page.meta-title != 'Cedced19'%}
+            	{% if page.title != 'Cedced19'%}
 	            <p>
 	                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>i
 	            </p>
