--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,6 +1,8 @@
 <main class="content-wrap" role="main">
 	{% if page.class == 'post' %}
-	<h1 class="h3">{{ page.title }}</h1>
+		{% if page.title != 'Blog' %}
+		<h1 class="h3">{{ page.title }}</h1>
+		{% endif %}
 	<p class="post-time"><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time></p>
 	{% endif %}
 
