--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
   padding: 0 40px;
   font-size: 15px;
   color: #FFF;
+  font-weight: bold;
+  text-transform: uppercase;
   line-height: 40px;
   background-color: transparent;
-  background-color: rgba(52, 152, 219,1.0);
+  background-color: rgba(243, 156, 18, 0);
   border: 2px solid #3498db;
   cursor: pointer;
   -moz-transition-duration: 0.3s;
@@ -15,6 +17,6 @@
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s; }
   .btn:hover {
-    background-color: #FFF;
-    border-color: #FFF;
+    background-color: #3498db;
+    border-color: #3498db;
     color: #000; }
