--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
   -moz-transition-duration: 0.3s;
   -o-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s; }
+  transition-duration: 0.3s; 
+  text-decoration:none; }
   .btn:hover {
     background-color: #3498db;
     border-color: #3498db;
