--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   display: inline-block;
   padding: 0 40px;
   font-size: 15px;
-  color: #FFF;
+  color: #FFF !important;
   font-weight: bold;
   text-transform: uppercase;
   line-height: 40px;
@@ -16,7 +16,7 @@
   -o-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s; 
-  text-decoration:none; }
+  text-decoration:none !important; }
   .btn:hover {
     background-color: #3498db;
     border-color: #3498db;
