--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   display: inline-block;
   padding: 0 40px;
   font-size: 15px;
-  color: #FFF !important;
+  color: #000 !important;
   font-weight: bold;
   text-transform: uppercase;
   line-height: 40px;
