--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
   line-height: 40px;
   background-color: transparent;
   background-color: rgba(243, 156, 18, 0);
-  border: 2px solid #3498db;
+  border: 3px solid #3498db !important;
   cursor: pointer;
   -moz-transition-duration: 0.3s;
   -o-transition-duration: 0.3s;
