--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,7 @@
   -o-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s; 
-  text-decoration:none !important; 
-  position:relative;
-  left:50%;
-  right:50%; }
+  text-decoration:none !important;}
   .btn:hover {
     background-color: #3498db;
     border-color: #3498db;
