--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
         <![endif]-->
         <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link rel="stylesheet" href="/css/style.css">
-
+        
+        <meta name="author" content="Cedced19">
+        
         <meta name="twitter:cars" content="summary" />
         <meta name="twitter:title" content="{{ page.title }}" />
         <meta name="twitter:image" content="http://cedced19.github.io/profile.png" />
