--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,11 @@
             <script type="text/javascript" src="/scripts/ie.js"></script>
         <![endif]-->
         <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+        {% if page.class == 'soon' %}
+        <link rel="stylesheet" href="/css/soon.css">
+        {% else %}
         <link rel="stylesheet" href="/css/style.css">
+        {% endif %}
         
         <meta name="author" content="Cedced19">
         
