--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,9 @@
             <script type="text/javascript" src="/scripts/ie.js"></script>
         <![endif]-->
         <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
-        {% include css.html %}
+        <style>
+        {% include style.css %}
+        </style>
         
         <meta name="author" content="Cedced19">
         
