--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	</p>
             {% if page.title != 'Cedced19'%}
             	{% if page.title != 'Blog'%}
-	            <p>
+	            <p class="padding">
 	                <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
 	            </p>
 	        {% endif %}
