--- a/home/s.css
+++ b/home/s.css
@@ -1,4 +1,9 @@
-html, body {
+html, body{
+	margin: 0;
+	padding: 0;
+}
+
+body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
 	background: #eaeaea;
@@ -10,8 +15,6 @@ html, body {
 	-ms-font-smoothing: antialiased;
 	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
-	margin: 0;
-	padding: 0;
 }
 
 button {
