--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
         <meta property="og:language" content="fr_FR">
         <meta property="og:url" content="{{ site.url }}">
 
-        <link href="https://plus.google.com/104855167193751168501/" rel="publisher">
+        <link href="//plus.google.com/104855167193751168501/" rel="publisher">
         
 
         <meta name="msvalidate.01" content="7AA9997055DFFA5FA75B150DB285F647">
