--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -35,6 +35,7 @@ $(function(){
 
 });
 </script>
+<script type="text/javascript">
 {% if page.title == 'Cedced19' %}
   (function() {
     jQuery(function($) {
@@ -121,6 +122,7 @@ $(function(){
     });
   
   }).call(this);
+</script>
 {% endif %}
 
 <script type="text/javascript">
