--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -124,6 +124,7 @@ $(function(){
   }).call(this);
 </script>
 {% endif %}
+{% endif %}
 
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
