--- a/demo/greeting-birth/uncompress.css
+++ b/demo/greeting-birth/uncompress.css
@@ -102,6 +102,13 @@
 {
 	font-size:2rem
 }
+
+	::selection
+{
+  	color:#FFF; 
+  	background:#FF0000; 
+}
+
 	  @font-face
 {
 	font-family:Roboto;
