--- a/soft/proto/uncompress.css
+++ b/soft/proto/uncompress.css
@@ -1,7 +1,7 @@
 /*////////////////////////////////////////////////
 --------------------------------------------------
-*	Proto Sandbox by @cedced19
-*	http://cedced19.gitub.io/proto/
+*	Proto by @cedced19
+*	http://cedced19.gitub.io/soft/proto/
 --------------------------------------------------
 ////////////////////////////////////////////////*/
 body,h1,h2,h3,h4,h5,h6,p,blockquote,pre,
@@ -17,11 +17,9 @@ strong,b,mark{
 section {
 	display:block;
 }
-/*////////////////////////////////////////////////
---------------------------------------------------
-*	Base
---------------------------------------------------
-////////////////////////////////////////////////*/
+/*------------------------------------*\
+     $Base
+\*------------------------------------*/
 html {
 	background:#f6f6f6;
 	color:#9099A3;
@@ -184,11 +182,9 @@ a:hover {
 	padding:20px 0;
 	text-align:center;
 }
-/*////////////////////////////////////////////////
---------------------------------------------------
-*	Demo iFrame
---------------------------------------------------
-////////////////////////////////////////////////*/
+/*------------------------------------*\
+     $Iframe
+\*------------------------------------*/
 .protoDemo {
 	padding:0 10px;
 	background:#f6f6f6;
@@ -203,11 +199,9 @@ iframe {
 	border:5px solid #eceef1;
 	background:white;
 }
-/*////////////////////////////////////////////////
---------------------------------------------------
-*	Builders
---------------------------------------------------
-////////////////////////////////////////////////*/
+/*------------------------------------*\
+     $Builder
+\*------------------------------------*/
 .protoBuilder {
 	overflow:hidden;
 	padding:0 10px 0 10px;
@@ -254,11 +248,9 @@ textarea {
 	padding:10px;
 	background:#eceef1;
 }
-/*////////////////////////////////////////////////
---------------------------------------------------
-*	Other
---------------------------------------------------
-////////////////////////////////////////////////*/
+/*------------------------------------*\
+     $Other
+\*------------------------------------*/
 .disclaimer {
 	padding:10px;
 	max-width:800px;
