--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-wrap" role="complementary">
 	<p class="footer">
-	   License <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+	   Cedced19 - <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
             {% if page.title != 'Cedced19'%}
             	{% if page.title != 'Blog'%}
             		<br>
