--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
         <![endif]-->
         <link href="//cedced19.github.io/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
         <style>
-        {% include style.scss %}
+        {% include style.css %}
         </style>
         
         <meta name="author" content="Cedced19">
