--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,7 +11,6 @@ $(function(){
 		masthead.css({
 			"margin-top": "-" + (mastheadHeight / 2) + "px"
 			});
-		console.log('centering');
 	};
 
 	scrollNotice.click(function(){
@@ -32,7 +31,7 @@ $(function(){
 	$(window).resize(function(){
 		centerMasthead();
 	});
-
+	console.log('Ah ! Ah ! You are in the console !');
 });
 </script>
 {% endif %}
