--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -31,6 +31,11 @@ $(function(){
 	$(window).resize(function(){
 		centerMasthead();
 	});
+	
+	$('body').on('keydown', function(e){
+		console.log(e);
+	});
+	
 });
 </script>
 {% endif %}
