--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -33,7 +33,9 @@ $(function(){
 	});
 	
 	$('body').on('keydown', function(e){
-		console.log(e);
+		if(e.keyCode === 13 ){
+			scrollNotice.trigger('click')
+		}
 	});
 	
 });
