--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -37,6 +37,7 @@ $(function(){
 	body.on('keydown', function(e){
 		if(e.keyCode === 13 ){
 			scrollNotice.trigger('click');
+			e.stopPropagation();
 		}
 	});
 	
