--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -35,7 +35,7 @@ $(function(){
 	});
 	
 	body.on('keydown', function(e){
-		if($('.scroll-notice').css('opacity') === 1){
+		if($('.scroll-notice').css('opacity') == 1){
 			if(e.keyCode === 13 ){
 				scrollNotice.trigger('click');
 				e.stopPropagation();
