--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         {% if page.class != 'fourOhfour' %}
             {% if page.class != 'soon' %}
                 {% include content.html %}
-                {% if page.title != 'Licence'%}
+                {% if page.title != 'License'%}
                     {% include footer.html %}
                 {% endif %}
             {% endif %}
