--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 {% if page.title != 'License'%}
+<hr class="rule">
 <footer class="footer-wrap" role="complementary">
 	<p class="footer">
 	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
