--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}{% if page.class == 'fourOhfour' %} | {{ site.title }} {% endif %}{% if page.class == 'home' %}{% if page.title != site.title %} | {{ site.title }}{% endif %}{% endif %}{% if page.class == 'post' %}{% if page.title != 'Blog'%} | Blog{% endif %}{% endif %}</title>
+        <title>{{ page.title }}{% if page.title != site.title %} | {{ site.title }}{% endif %}</title>
         <meta name="viewport" content="width=device-width">
         <!--[if lt IE 9]>
             <script type="text/javascript" src="/scripts/ie.js"></script>
