--- a/_includes/head-post.html
+++ b/_includes/head-post.html
@@ -34,6 +34,7 @@
         -->
         <style>
         {% include style.css %}
+        {% include style-post.css %}
         </style>
         
         <meta name="author" content="Cedced19">
