--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,14 @@
     </head>
     <body>
     
-        {% include content.html %}
+        <main class="content-wrap" role="main">
+        	{% if page.title != 'Blog' %}
+        	<h1 class="h3">{{ page.title }}</h1>
+        	<p class="post-time"><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time></p
+        	{% endif %}
+        
+        	{{ content }}
+        </main>
         {% include footer.html %}
 
         {% include analytics.html %}
