--- a/_includes/navblog.css
+++ b/_includes/navblog.css
@@ -1,38 +1,3 @@
 nav {
-  margin: 0 !important;
-  padding: 0 !important;
-  width: 100% !important;
-  height: 50px !important;
-  background: #{{ site.colora }} !important;
-}
-
-ul.menu {
-  margin: 0 auto !important;
-  padding: 0 !important;
-  padding-top: 15px !important;
-  padding-left: 150px !important;
-}
-
-li.menu {
-  color: #fff !important;
-  padding: 19px 15px !important;
-  margin-left: 0 !important;
-  display: inline !important;
-  font-size: 15px !important;
-}
-li.menu:hover {
-  background: #fff !important;
-  color: #{{ site.colorb }} !important;
-  transition: all .6s !important;
-}
-
-a.menu {
-  color: inherit !important;
-  text-decoration: none !important;
-  border-bottom: 0px dotted #FFF !important;
-}
-
-li.active {
-  background: #fff !important;
-  color: #{{ site.colorb }} !important;
+  padding: 15px 0 0 15px;
 }
