--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-{% if page.title != 'License'%}
+{% if page.tweeter == 'true'%}
 <hr class="rule">
 <footer class="footer-wrap" role="complementary">
 	<p class="footer">
