--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <hr class="rule">
 <footer class="footer-wrap" role="complementary">
 	<p class="footer">
-	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
+	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>{{ page.tweeter}}
             	{% if page.tweeter == 'true'%}
 	            	<br>
 	            	<br>
