--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,8 +6,8 @@ $(function(){
 		masthead = $('.masthead'),
 		scrollNotice = $('.scroll-notice'),
 		body = $('body');
-		
-		
+
+
 	function centerMasthead(){
 		var mastheadHeight = masthead.height();
 		masthead.css({
@@ -33,7 +33,7 @@ $(function(){
 	$(window).resize(function(){
 		centerMasthead();
 	});
-	
+
 	body.on('keydown', function(e){
 		if(scrollNotice.css('opacity') == 1){
 			if(e.keyCode === 13 ){
@@ -41,13 +41,120 @@ $(function(){
 			};
 		};
 	});
-	
+
 });
 </script>
-{% endif %}
-{% if page.title == 'ICed' %}
+{% if page.title == site.title %}
 <script type="text/javascript">
-progressBar={countElmt:0,loadedElmt:0,init:function(){var a=this;this.countElmt=$("img").length;var b=$("<div/>").attr("id","progressbar-container");b.append($("<div/>").attr("id","progressbar")),b.appendTo($("body"));var c=$("<div/>").attr("id","progressbar-elements");c.appendTo($("body")),$("img").each(function(){$("<img/>").attr("src",$(this).attr("src")).on("load error",function(){a.loadedElmt++,a.updateProgressBar()}).appendTo(c)})},updateProgressBar:function(){$("#progressbar").stop().animate({width:progressBar.loadedElmt/progressBar.countElmt*100+"%"},200,"linear",function(){progressBar.loadedElmt==progressBar.countElmt&&setTimeout(function(){$("#progressbar-container").animate({top:"-8px"},function(){$("#progressbar-container").remove(),$("#progressbar-elements").remove()})},720)})}},progressBar.init();
+(function ($, undefined) {
+
+      // Put custom repo URL's in this object, keyed by repo name.
+      var repoUrls = {
+
+      };
+
+      function repoUrl(repo) {
+        return repoUrls[repo.name] || repo.html_url;
+      }
+
+      // Put custom repo descriptions in this object, keyed by repo name.
+      var repoDescriptions = {
+
+      };
+
+      function repoDescription(repo) {
+        return repoDescriptions[repo.name] || repo.description;
+      }
+
+      function addRepo(repo) {
+        var $item = $("<li>").addClass("repo");
+        $("<a>").text(repo.name).attr("href", repoUrl(repo)).addClass("name-repo").appendTo($item);
+        $("<p>").text(repoDescription(repo)).appendTo($item);
+        $("<span>").addClass("language").text(repo.language).appendTo($item);
+        var $br = $("<br>")
+
+        if (repo.fork == true) {
+          $br.appendTo($item)
+          $("<span>").addClass("fork").text("Forked").appendTo($item);
+        };
+
+
+
+        $item.appendTo("#repos");
+      }
+
+      function addRepos(repos, page) {
+        repos = repos || [];
+        page = page || 1;
+
+        var uri = "https://api.github.com/users/cedced19/repos?callback=?"
+                + "&per_page=100"
+                + "&page="+page;
+
+        $.getJSON(uri, function (result) {
+          if (result.data && result.data.length > 0) {
+            repos = repos.concat(result.data);
+            addRepos(repos, page + 1);
+          }
+          else {
+            $(function () {
+              $("#num-repos").text(repos.length);
+
+              // Convert pushed_at to Date.
+              $.each(repos, function (i, repo) {
+                repo.pushed_at = new Date(repo.pushed_at);
+
+                var weekHalfLife  = 1.146 * Math.pow(10, -9);
+
+                var pushDelta    = (new Date) - Date.parse(repo.pushed_at);
+                var createdDelta = (new Date) - Date.parse(repo.created_at);
+
+                var weightForPush = 1;
+                var weightForWatchers = 1.314 * Math.pow(10, 7);
+
+                repo.hotness = weightForPush * Math.pow(Math.E, -1 * weekHalfLife * pushDelta);
+                repo.hotness += weightForWatchers * repo.watchers / createdDelta;
+              });
+
+              // Sort by highest # of watchers.
+              repos.sort(function (a, b) {
+                if (a.hotness < b.hotness) return 1;
+                if (b.hotness < a.hotness) return -1;
+                return 0;
+              });
+
+              $.each(repos, function (i, repo) {
+                addRepo(repo);
+              });
+
+              // Sort by most-recently pushed to.
+              repos.sort(function (a, b) {
+                if (a.pushed_at < b.pushed_at) return 1;
+                if (b.pushed_at < a.pushed_at) return -1;
+                return 0;
+              });
+
+            });
+          }
+        });
+      }
+      addRepos();
+
+
+
+      var match = (/\blarry(=(\d+))?\b/i).exec(window.location.search);
+
+      if (match) {
+        var n = parseInt(match[2]) || 20;
+
+        $(function () {
+          for (var i = 0; i < n; ++i) {
+            setTimeout(makeRandomLarry, Math.random() * n * 500);
+          }
+        });
+      }
+
+    })(jQuery);
 </script>
 {% endif %}
 
