--- a/_includes/content.html
+++ b/_includes/content.html
@@ -12,12 +12,12 @@
         <h2 id="depots">Dépôts</h2>
         <ol id="repos">
          <li>
-           <a href="http://cedced19.github.io/soft/home/">Home C</a>
+           <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home C</a>
            <p>Une page d'acceuil sans pub.</p>
            <span class="language">JavaScript</span>
          </li>
          <li>
-           <a href="http://cedced19.github.io/soft/proto/">Prototype</a>
+           <a href="http://cedced19.github.io/soft/proto/" class="name-repo">Prototype</a>
            <p>Une page pour créer des petites page HTML</p>
            <span class="language">JavaScript</span>
           </li>
