--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,9 @@
-{% if page.tiltle != 'License'%}
 <hr class="rule">
-<!-- Thanks to Troy Swanson --> 
 <footer class="footer-wrap" role="complementary">
 	<p class="footer">
 	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
-            	{% if page.tweeter == true %}
-	            	<br>
-	            	<br>
-		        <a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a><br>
+            	{% if page.class == 'post' %}
+		        <div class="social"><a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a></div>
 	        {% endif %}
         </p>
 </footer>
-{% endif %}
